# fastapi-docker-alembic

./: .env.example  README.md  docker-commands.md  docker-compose.yml
server/: Dockerfile  pyproject.toml
server/alembic/: env.py
server/alembic/versions/: 55cd424ddb85_.py
server/src/: config.py  main.py
server/src/db/: database.py
server/src/models/: post_models.py
server/src/routers/: post_routers.py
